infrastructure/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: blackadi2019/client
#to create multiple objects inside one yaml file we add "---"
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  #type: ClusterIP # This is optional since ks8 will by default create ClusterIP service type
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
