infrastructure/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: blackadi2019/event-bus
#to create multiple objects inside one yaml file we add "---"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  #type: ClusterIP # This is optional since ks8 will by default create ClusterIP service type
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
