infrastructure/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: blackadi2019/moderation
#to create multiple objects inside one yaml file we add "---"
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  #type: ClusterIP # This is optional since ks8 will by default create ClusterIP service type
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
