infrastructure/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts #This is the lable to search for inside pods
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # This is the port related to the node service
      targetPort: 4000 #container inside the pod port
