infrastructure/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: blackadi2019/query
#to create multiple objects inside one yaml file we add "---"
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  #type: ClusterIP # This is optional since ks8 will by default create ClusterIP service type
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
